--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="publisher_icon">80dp</dimen>
     <dimen name="publisher_name_text_size">20sp</dimen>
     <dimen name="publisher_timestamp_text_size">14sp</dimen>
+    <dimen name="category_icon">60dp</dimen>
 </resources>
