--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="publisher_name_text_size">25sp</dimen>
     <dimen name="publisher_timestamp_text_size">18sp</dimen>
     <dimen name="category_icon">80dp</dimen>
+    <dimen name="title_text_size">30sp</dimen>
 </resources>
