--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="publisher_name_text_size">20sp</dimen>
     <dimen name="publisher_timestamp_text_size">14sp</dimen>
     <dimen name="category_icon">60dp</dimen>
+    <dimen name="title_text_size">25sp</dimen>
 </resources>
