--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="publisher_timestamp_text_size">18sp</dimen>
     <dimen name="category_icon">80dp</dimen>
     <dimen name="title_text_size">30sp</dimen>
+    <dimen name="book_details_text_size">20sp</dimen>
+    <dimen name="book_details_icon_size">250dp</dimen>
+    <dimen name="book_details_title_text_size">25sp</dimen>
 </resources>
