--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="publisher_timestamp_text_size">14sp</dimen>
     <dimen name="category_icon">60dp</dimen>
     <dimen name="title_text_size">25sp</dimen>
+    <dimen name="book_details_text_size">17sp</dimen>
+    <dimen name="book_details_icon_size">180dp</dimen>
+    <dimen name="book_details_title_text_size">22sp</dimen>
 </resources>
