--- a/app/src/main/res/layout/book_details_layout.xml
+++ b/app/src/main/res/layout/book_details_layout.xml
@@ -11,9 +11,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="Book"
-        android:textStyle="bold"
         android:textSize="@dimen/book_details_title_text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
